Thu Oct 29 21:04:27 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/README:
        * ace/config-aix-5.x.h:
        * ace/config-irix6.x-g++.h:
        * ace/config-lynxos.h:
        * ace/config-netbsd.h:
        * ace/config-openbsd.h:
        * ace/config-sco-5.0.0-nothread.h:
        * ace/config-sunos5.4-g++.h:
        * ace/config-sunos5.5.h:
        * ace/config-tru64.h:
        * ace/config-unixware-7.1.0.h:
        * ace/config-win32-borland.h:
        * ace/config-win32-dmc.h:
        * ace/config-win32-ghs.h:
        * configure.ac:
        * m4/config_h.m4:
          Removed references to ACE_HAS_GNU_CSTRING_H.

Thu Oct 29 20:30:35 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_stdlib.h:
          Readded undef atop. Fixes compile error on FreeBSD.

Thu Oct 29 13:58:25 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_stdlib.h:
        * ace/OS_NS_stdlib.inl:
        * ace/OS_NS_time.h:
          Removed some legacy undefs.

Thu Oct 29 08:08:51 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/Log_Msg.cpp:
        * ace/Select_Reactor_Base.cpp:
          Fixed fuzz errors.

Wed Oct 28 19:49:39 UTC 2009  Chris Cleeland  <cleeland@ociweb.com>

        * ace/Select_Reactor_Base.h:
        * ace/Select_Reactor_Base.cpp:

          Changed the second recv() that is used in case of a short first
          read to be a recv_n(), blocking until the rest of the buffer can
          be received on the pipe.  The problem was discovered during
          routine testing (Notify_Performance_Test) on VxWorks 6.7 on a P3
          platform, but could occur on any platform. [Bugzilla 3754]

Wed Oct 28 11:58:21 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-win32-msvc-7.h:
          Reverted: Tue Oct 27 19:40:59 UTC 2009  Olli Savia  <ops@iki.fi>
          It seems that VC7 doesn't support _get_osfhandle.

Wed Oct 28 11:54:03 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/Log_Msg.h:
        * ace/Log_Msg.cpp: